# src/main/kotlin/com/trackmybus/theKeg/features/schedule/data/remote/dto/RouteStopInfoDto.kt
@@ -1,0 +1,12 @@
+package com.trackmybus.theKeg.features.schedule.data.remote.dto
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class RouteStopInfoDto(
+    val firstStopId: String,
+    val firstStopName: String,
+    val lastStopId: String,
+    val lastStopName: String,
+    val directionId: Int,
+)
