# src/main/kotlin/com/trackmybus/theKeg/features/schedule/domain/repository/route/RouteRepository.kt
@@ -1,11 +1,14 @@
 package com.trackmybus.theKeg.features.schedule.domain.repository.route
 
 import com.trackmybus.theKeg.features.schedule.domain.model.Route
+import com.trackmybus.theKeg.features.schedule.resource.RouteType
 
 interface RouteRepository {
     suspend fun getAll(): Result<List<Route>>
 
     suspend fun getById(id: String): Result<Route?>
+
+    suspend fun getRoutesByType(type: RouteType): Result<List<Route>>
 
     suspend fun add(calendar: Route): Result<Route>
 
